# Changelog

## [2.0.10.2] - 2022-01-19
- added completion time for individual responses (answers)

## [2.0.10.1] - 2022-01-19
- added other specify data to <VAR> tag display

## [2.0.10.0] - 2022-01-01
- updated to Yii 2.0
- updated to Bootstrap 4
- updated to jQuery v3.5.1

## [2.0.9.12] - 2021-06-23
- merge alter label fix

## [2.0.9.11] - 2021-06-14
- merge alter suffix

## [2.0.9.10] - 2021-06-04
- merge alter label customization

## [2.0.9.9] - 2021-06-01
- merge alter fix - prioritizes exact matches

## [2.0.9.8] - 2021-05-19
- duplicate alter fix.  optimized data retrieval during alter saving and disables "add" button until alter saves.

## [2.0.9.7] - 2021-05-14
- name generator expression fix

## [2.0.9.6] - 2021-04-28
- merge alter question fix
- expression import fix

## [2.0.9.5] - 2021-04-26
- previous alter import fix (links responses to appropriate alters)

## [2.0.9.4] - 2021-04-22
- other specify export fix (decodes quote marks)

## [2.0.9.3] - 2021-04-08
- numeric validation fix (was allow alphetical characters)

## [2.0.9.2] - 2021-03-31
- fixed issue with other specify export
- sync study fixes (transfers study to different servers)

## [2.0.9] - 2021-03-23
### Changed
- Fixed issues with alter matching in MERGE_ALTER function
- Modified data export functions with new PREVIOUS_ALTER and MERGE_ALTER question types

## [2.0.8] - 2021-02-24
### Changed
- Finalize ALP merge

## [2.0.7] - 2021-02-01
### Added
- Added previous alter and merge alter function for multi-session

## [2.0.6] - 2021-01-06
### Changed
- Added pagination to data export

## unlisted updates to be added

## [2.0.5] - 2020-12-10
### Added
- Modified process for refusing to answer a question and updated error message for trying to click "Next" without answer question.  If the question has refuse, users can proceed by clicking "Next" again without having to check "refuse" (although it will be saved as "refuse" in the data).

## [2.0.2] - 2017-08-07
### Added