@@ -2,6 +2,7 @@
 
 ## [2.0.10.2] - 2022-01-19
 - added completion time for individual responses (answers)
+- pagination for data section
 
 ## [2.0.10.1] - 2022-01-19
 - added other specify data to <VAR> tag display
